--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.11",
-    "@mui/material": "^6.4.11",
+    "@mui/material": "^7.1.0",
     "@tanstack/react-query": "^5.67.3",
     "aceternity-ui": "^0.2.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
     "react-table": "^7.8.0",
     "slick-carousel": "^1.8.1",
+    "vit": "^0.0.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
