--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^11.8.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.18.2",
+    "lucide-react": "^0.513.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.16.0",
